syntax = "proto3";

option csharp_namespace = "EventBus.Messages.Protos";

service QuizGrpc {
	rpc GetQuizAnswers (GetQuizAnswersRequest) returns (QuizAnswersResponse);
}

message GetQuizAnswersRequest {
	string quiz_id = 1;
}

message QuizAnswersResponse {
	string title = 1;
	repeated QuestionAnswer answer = 2;
}

message QuestionAnswer {
	string question_id = 1;
	int32 correct_option_index = 2;
}
